<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>
    <string name="login">Login</string>
    <string name="register">Sign up for AppDojo!</string>
    <string name="logo">Logo</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_register">Register</string>
    <string name="f_name_prompt">First Name</string>
    <string name="l_name_prompt">Last Name</string>
    <string name="finish">Finish!</string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Home</string>

</resources>